# daemonizedTCPserver

./: CMakeLists.txt  README.md  TCPserver.service  client
src/: CMakeLists.txt  client.c  main.c
src/daemonize/: CMakeLists.txt  daemonize.c  daemonize.h
src/server/: CMakeLists.txt  server.c  server.h
